--- a/kalkulator.css
+++ b/kalkulator.css
@@ -10,12 +10,13 @@ body{
     color: white;
     font-size: 25px;
     text-align: center;
+    margin: 50px auto 0px auto;
 
 }
 
 .kalkulator{
     width: 300px;
-    margin: 100px auto;
+    margin: 50px auto;
     padding: 20px;
     background: #f1e3cb;
     border-radius: 10px;
